--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,14 +14,14 @@ jobs:
       run: |
         echo ::set-output name=version::$(curl -s https://raw.githubusercontent.com/actions/go-versions/main/versions-manifest.json | sed -rn 's/.*"version": "([0-9]\.[0-9]+(\.[0-9]+)?)".*/\1/p' | head -1)
     - uses: actions/setup-go@v2
-      with: { go-version: ${{ steps.goversion.outputs.version }} }
+      with: { go-version: "${{ steps.goversion.outputs.version }}" }
     - uses: actions/checkout@v2
     - run: make fetch
     - uses: goreleaser/goreleaser-action@v2
       with:
         version: latest
         args: release --rm-dist --snapshot
-      env: { GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} }
+      env: { GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}" }
     - uses: actions/upload-artifact@v2
       with: { path: dist/, if-no-files-found: error }
   goreleaser-publish-tags:
@@ -32,7 +32,7 @@ jobs:
       run: |
         echo ::set-output name=version::$(curl -s https://raw.githubusercontent.com/actions/go-versions/main/versions-manifest.json | sed -rn 's/.*"version": "([0-9]\.[0-9]+(\.[0-9]+)?)".*/\1/p' | head -1)
     - uses: actions/setup-go@v2
-      with: { go-version: ${{ steps.goversion.outputs.version }} }
+      with: { go-version: "${{ steps.goversion.outputs.version }}" }
     - uses: actions/checkout@v2
     - run: make fetch
     - run: |
@@ -42,7 +42,7 @@ jobs:
       with:
         version: latest
         args: release --rm-dist --skip-validate --release-header=notes-header.md --release-footer=notes-footer.md
-      env: { GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} }
+      env: { GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}" }
   docker-publish-tags:
     if: contains(github.ref, 'refs/tags/v')
     needs: [goreleaser-publish-tags]
