add paths-ignore to actions/build

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,7 +1,9 @@
 name: build
 
 on:
-  push: { branches: [master] }
+  push:
+    paths-ignore: ['.gitignore', '**/*.md']
+    branches: [master]
   pull_request: { branches: [master] }
 
 jobs:
