--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,9 +1,9 @@
 project_name: vault-unseal
-build:
-  binary: vault-unseal
-  goos: [linux]
-  goarch: [amd64]
-  ldflags: -s -w -X main.version=v{{.Version}} -X main.commit={{.Commit}} -X main.date={{.Date}}
+builds:
+  - binary: vault-unseal
+    goos: [linux]
+    goarch: [amd64]
+    ldflags: -s -w -X main.version=v{{.Version}} -X main.commit={{.Commit}} -X main.date={{.Date}}
 nfpms:
   - homepage: https://github.com/lrstanley/vault-unseal
     maintainer: Liam Stanley <me@liamstanley.io>
@@ -11,8 +11,9 @@ nfpms:
     license: MIT
     formats: [deb, rpm]
     bindir: /usr/bin
-    config_files:
-      "example.vault-unseal.yaml": "/etc/vault-unseal.yaml"
+    contents:
+      - src: example.vault-unseal.yaml
+        dst: /etc/vault-unseal.yaml
     files:
       "scripts/vault-unseal.systemd": "/etc/systemd/system/vault-unseal.service"
     scripts:
