chore(terraform): auto-applied ".github/ISSUE_TEMPLATE/config.yml" [skip ci]
this file was auto-applied from the "github-common-files" module
located here:
  - https://github.com/lrstanley/.github/tree/master/terraform/github-common-files

instructions on how to tell Terraform to exclude this file:
  - https://github.com/lrstanley/.github/blob/master/example.ci-config.yml

Signed-off-by: Liam Stanley <me@liamstanley.io>

--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -9,7 +9,7 @@ contact_links:
     url: "https://github.com/lrstanley/vault-unseal/discussions/new?category=show-and-tell"
   - name: "✋ Additional support information"
     about: Looking for something else? Check here.
-    url: "https://github.com/lrstanley/vault-unseal/blob/master/SUPPORT.md"
+    url: "https://github.com/lrstanley/vault-unseal/blob/master/.github/SUPPORT.md"
   - name: "💬 Discord chat"
     about: On-topic and off-topic discussions.
     url: "https://liam.sh/chat"
