build image when testing; don't scan when releasing
Signed-off-by: Liam Stanley <me@liamstanley.io>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,6 +9,7 @@ jobs:
     uses: lrstanley/.github/.github/workflows/docker-release.yml@master
     secrets:
       SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+      scan: false
   go-release:
     uses: lrstanley/.github/.github/workflows/lang-go-release.yml@master
     with:
