misc actions tweaks
Signed-off-by: Liam Stanley <liam@liam.sh>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,8 +7,7 @@ on:
 jobs:
   docker-release:
     uses: lrstanley/.github/.github/workflows/docker-release.yml@master
-    secrets:
-      SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+    secrets: inherit
     with:
       scan: false
   go-release:
