--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,8 +16,7 @@ jobs:
       go-version: latest
   go-lint:
     uses: lrstanley/.github/.github/workflows/lang-go-lint.yml@master
-    secrets:
-      SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+    secrets: inherit
   go-build:
     needs: [go-test, go-lint]
     uses: lrstanley/.github/.github/workflows/lang-go-release.yml@master
@@ -27,5 +26,4 @@ jobs:
   docker-test:
     needs: [go-test, go-lint]
     uses: lrstanley/.github/.github/workflows/docker-release.yml@master
-    secrets:
-      SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+    secrets: inherit
