more actions tweaks
Signed-off-by: Liam Stanley <liam@liam.sh>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,6 +12,7 @@ jobs:
       scan: false
   go-release:
     uses: lrstanley/.github/.github/workflows/lang-go-release.yml@master
+    secrets: inherit
     with:
       has-ghcr: true
       upload-artifacts: true
